# bazel_kotlin_ex

./: .gitignore  BUILD.bazel  LICENSE.txt  README.md  WORKSPACE
src/main/kotlin/helloworld/: Main.kt
src/test/kotlin/helloworld/: MainTest.kt
