load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_binary", "kt_jvm_test")

kt_jvm_library(
    name = "helloworld_lib",
    srcs = glob(["src/main/kotlin/helloworld/Main.kt"]),
)

kt_jvm_binary(
    name = "helloworld_bin",
    main_class = "helloworld.MainKt",
    runtime_deps = [
        ":helloworld_lib"
    ]
)

kt_jvm_test(
    name = "helloworld_test",
    srcs = ["src/test/kotlin/helloworld/MainTest.kt"],
    test_class = "helloworld.MainTest",
    deps = [
        "@maven//:junit_junit",
        ":helloworld_lib",
    ],
)
